@@ -51,7 +51,7 @@ int addClock(int x,int y,int grav)
 	clockButton->LFSTK_setIgnores(false,false);
 	clockButton->LFSTK_setTile(NULL,0);
 	clockButton->LFSTK_setLabelAutoColour(true);
-	clockButton->LFSTK_setGadgetColourPair(NORMALCOLOUR,panelBGColour,panelTextColour);
+	clockButton->LFSTK_setGadgetColourPair(NORMALCOLOUR,dockBGColour,dockTextColour);
 	clockButton->LFSTK_setStyle(BEVELNONE);	
 
 	//clockButton->drawLabelBG=true;
